    into a single UPDATE; many-to-many relations on the parent object
    update properly.  [ticket:841]

  - Fixed __hash__ for association proxy- these collections are unhashable,
    just like their mutable Python counterparts.

  - Added proxying of save_or_update, __contains__ and __iter__ methods for
    scoped sessions.

- dialects

  - Added experimental support for MaxDB (versions >= 7.6.03.007 only).

  - sqlite will reflect "DECIMAL" as a numeric column.

  - Made access dao detection more reliable [ticket:828]

  - Renamed the Dialect attribute 'preexecute_sequences' to
    'preexecute_pk_sequences'.  An attribute porxy is in place for
    out-of-tree dialects using the old name.

  - Added test coverage for unknown type reflection. Fixed sqlite/mysql
    handling of type reflection for unknown types.

- misc

  - Removed unused util.hash().


0.4.0
-----

- (see 0.4.0beta1 for the start of major changes against 0.3, 
  as well as http://www.sqlalchemy.org/trac/wiki/WhatsNewIn04 )

- Added initial Sybase support (mxODBC so far) [ticket:785]

- Added partial index support for PostgreSQL. Use the postgres_where keyword
  on the Index.

- string-based query param parsing/config file parser understands
  wider range of string values for booleans [ticket:817]
  
- backref remove object operation doesn't fail if the other-side
  collection doesn't contain the item, supports noload collections
  [ticket:813]

- removed __len__ from "dynamic" collection as it would require issuing
  a SQL "count()" operation, thus forcing all list evaluations to issue
  redundant SQL [ticket:818]
  
- inline optimizations added to locate_dirty() which can greatly speed up
  repeated calls to flush(), as occurs with autoflush=True [ticket:816]
  
- The IdentifierPreprarer's _requires_quotes test is now regex based.  Any
  out-of-tree dialects that provide custom sets of legal_characters or
  illegal_initial_characters will need to move to regexes or override
  _requires_quotes.
